# Alas-with-Dashboard

./: .gitignore  CLAUDE.md  FORK_CHANGES.md  IMMEDIATE_ACTION_PLAN.md  MODERNIZATION_COMPLETE.md  MODERNIZATION_PLAN.md  OCR_MIGRATION_SUMMARY.md  PYTHON_MODERNIZATION_ISSUE.md  README.md  REVIEW_PLAN_FOR_GEMINI.md  TEST_RESULTS_REPORT.md  VISION_LLM_CRITIQUE.md  VISION_LLM_INTEGRATION_PLAN.md  VISION_MODEL_OCR_PROPOSAL.md  alas.py  install_tesseract.py  pyproject.toml  requirements-in.txt  requirements.txt  review_notes.md  test_gemini_vision.py  test_ocr.py  test_ocr_flexible.py  test_ocr_simple.py
.claude/: settings.local.json
config/: template.json  vision_llm_config.py  vision_llm_config.py.template  vision_ollama_config.py
module/: logger.py  logger.pyi  server_checker.py  vision_llm.py
module/awaken/: assets.py  awaken.py
module/base/: base.py  button.py  decorator.py  filter.py  resource.py  retry.py  template.py  timer.py  utils.py
module/campaign/: assets.py  campaign_base.py  campaign_event.py  campaign_ocr.py  campaign_status.py  campaign_ui.py  gems_farming.py  os_run.py  run.py
module/coalition/: assets.py  coalition.py  coalition_sp.py  combat.py  ui.py
module/combat/: assets.py  auto_search_combat.py  combat.py  combat_auto.py  combat_manual.py  emotion.py  hp_balancer.py  level.py  submarine.py
module/combat_ui/: assets.py
module/commission/: assets.py  commission.py  preset.py  project.py  project_data.py
module/config/: code_generator.py  config.py  config_generated.py  config_manual.py  config_updater.py  deep.py  server.py  utils.py  watcher.py
module/daemon/: benchmark.py  daemon.py  game_manager.py  uncensored.py
module/daily/: assets.py  daily.py  equipment.py
module/device/: app_control.py  connection.py  connection_attr.py  control.py  device.py  env.py  screenshot.py
module/dorm/: assets.py  buy_furniture.py  dorm.py
module/equipment/: assets.py  equipment.py  equipment_change.py  fleet_equipment.py
module/event/: assets.py  base.py  campaign_abcd.py  campaign_sp.py  maritime_escort.py
tests/: test_integration.py  test_modernization.py  test_ocr_removal.py  test_ocr_simple.py  test_syntax.py
(+235 files in other folders)
